# chatlogUI

./: .eslintrc.cjs  .gitignore  findings.md  index.html  package.json  pnpm-lock.yaml  progress.md  task_plan.md  tsconfig.json  vite.config.ts  开发指南.md
.agents/skills/planning-with-files/: SKILL.md
.agents/skills/ui-ux-pro-max/: SKILL.md
.github/scripts/: prepare-sidecar.sh
.github/workflows/: build-check.yml  release.yml
docs/: Sprint1-基础设施详细规划.md  Sprint2-聊天记录系统详细规划.md  Sprint3-AI聊天分析详细规划.md  总体开发规划.md
docs/superpowers/plans/: 2026-05-28-sprint4-knowledge-graph.md  2026-05-28-sprint5a-advanced-features.md  2026-05-28-sprint5b-advanced-features.md  2026-05-28-sprint6-release.md  2026-05-29-current-issues-remediation.md
docs/superpowers/specs/: 2026-05-28-sprint4-knowledge-graph-design.md  2026-05-28-sprint5a-advanced-features-design.md  2026-05-28-sprint5b-advanced-features-design.md  2026-05-28-sprint6-release-design.md
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  health.rs  lib.rs  main.rs  material.rs  port_killer.rs  sidecar.rs  theme.rs
src/l1-entry/pages/: DashboardView.tsx  LaunchView.tsx  SettingsView.tsx  dashboardLayout.test.ts  dashboardLayout.ts
src/l1-entry/routes/: index.tsx
src/l2-coordinator/api-docs/: contacts.ts  graph.ts  history.ts  search.ts  semantic.ts  settings.ts  sidecar.ts  stats.ts  update.ts
src/styles/: globals.css
src/types/: d3-force-3d.d.ts
src/utils/: constants.ts
(+121 files in other folders)
