[package]
name = "chatlogUI"
version = "0.1.0"
description = "chatlog_alpha Desktop Application"
authors = [""]
edition = "2021"

[lib]
name = "chatlogUI_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
